@@ -33,11 +33,15 @@ start (name:ws) = ifM (isJust <$> findExisting name)
 	( error $ "There is already a special remote named \"" ++ name ++
 		"\". (Use enableremote to enable an existing special remote.)"
 	, do
-		let c = newConfig name
-		t <- findType config
+		ifM (isJust <$> Remote.byNameOnly name)
+			( error $ "There is already a remote named \"" ++ name ++ "\""
+			, do
+				let c = newConfig name
+				t <- findType config
 
-		showStart "initremote" name
-		next $ perform t name $ M.union config c
+				showStart "initremote" name
+				next $ perform t name $ M.union config c
+			)
 	)
   where
 	config = Logs.Remote.keyValToConfig ws
